@@ -1,3 +1,8 @@
+2021-08-11 Robin Lee Powell <rlpowell@digitalkingdom.org>
+
+	* libipmiconsole: Document getty/agetty issue with serial
+	keepalive
+
 2021-05-28 Albert Chu <chu11@llnl.gov>
 
 	* configure.ac: Support --with-systemconfigdir option.
